Version 0.8.11 (2011-09-06):

    * Converting the application file encoding from ISO-8859-1 to UTF-8.

    * The project source is managed using the netbeans IDE. The formatting is 
      using Linux kernel source (C) rules (eight chars indent).

Version 0.8.10 (2010-08-10):

	* Maintenance release for web services. Fixed zero job ID for
	  crashed jobs (SOAP) and redeclared function error for http_put_file()
	  defined in PECL HTTP extension.

Version 0.8.9 (2010-08-03):

	* Maintenance release that fixes some documentation errors and
	  some minor bugs in the web service API (missing call to user
	  defined hooks).
        
Version 0.8.8 (2009-05-26):

	* Fixed a bug (missing paranthesis) in the FOA encoder for the REST service.
	
	* Added README.PHP4 outlining getting started notes for PHP4 users.

Version 0.8.7 (2009-05-25):

	* Improved compatibility by ensuring the system works with:
	  allow_call_time_pass_reference = Off
	  
	* Improved PHP 4 support (needed for RHEL4):
	  1) Added workaround for missing sys_get_temp_dir() and strpbrk(). 
	  2) Fixed timezone handling.

Version 0.8.6 (2009-05-25):

	* Run 'make ws_php4' to create a PHP4 compatible version of utils/ws.php.
	
	* The web service status page is now showing an service as disabled if 
	  an required PHP extension is not loaded (i.e. missing soap extension).
	  
	* Visual improvements: fixing help menu width, icon alignment, headers, ...
	
Version 0.8.5 (2009-05-21):

	* Adding workaround for missing datetime/timezone functions.
	
	* Improved Ajax support. All links leading to the queue view is now
	  working, the same when using the refresh button in the queue view.
	  
	* Improved installation and web service documentation. Added picture
	  describing the relations between the web frontend, the web service
	  API and the internal API.
	
Version 0.8.4 (2009-05-20):

	* Trusted hosts with extended capabilities (i.e. allowed to bypass the 